--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "@heroicons/vue": "^2.1.3",
     "@tanstack/vue-query": "^5.24.1",
+    "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
+    "epic-spinners": "^2.0.0",
     "pinia": "^2.1.7",
     "swiper": "^11.0.6",
     "vue": "^3.4.15",
     "vue-preloader": "^1.1.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
